<resources>
    <string name="app_name">appV600</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="sign_in">"Sign in"</string>

    <string name="action_sign_in_short">Sign in short</string>
</resources>
